<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_banner"
            android:icon="@drawable/ic_banner"
            android:title="@string/menu_banner" />
        <item
            android:id="@+id/nav_mrec"
            android:icon="@drawable/ic_mrec"
            android:title="@string/menu_mrec" />
        <item
            android:id="@+id/nav_interstitial"
            android:icon="@drawable/ic_interstitial"
            android:title="@string/menu_interstitial" />
        <item
            android:id="@+id/nav_rewarded_ad"
            android:icon="@drawable/ic_rewarded"
            android:title="@string/menu_rewarded" />
    </group>
</menu>